# crypto-exchange

./: .gitignore  Cargo.toml  README.md  build-ubuntu.sh
.cargo/: config.toml
agent/: Cargo.toml  config.production.toml  config.toml
agent/src/: main.rs
block/: Cargo.toml
block/block-common/: Cargo.toml
block/block-common/src/: common.rs  lib.rs  transaction.rs  wallet.rs
block/btc/: Cargo.toml
block/btc/src/: main.rs
block/eth/: Cargo.toml
block/eth/src/: main.rs
block/sol/: Cargo.toml
block/sol/src/: main.rs
block/src/: lib.rs
business/: Cargo.toml  config.production.toml  config.toml
business/locales/: en-US.ftl  zh-CN.ftl
business/src/: main.rs
business/src/api/: common.rs  mod.rs  trade.rs  user.rs
business/src/config/: mod.rs
business/src/handle/: common.rs  market.rs  user.rs
business/src/handlers/: trade.rs  user.rs
business/src/middleware/: auth.rs  i18n.rs  logging.rs  mod.rs  rate_limit.rs
business/src/service/: agent_relation_service.rs  market_service.rs  mod.rs  trade_service.rs  user_service.rs
business/src/state/: mod.rs
business/src/subscribers/: mod.rs  user_registered.rs
common/: Cargo.toml
common/src/: constants.rs  lib.rs
common/src/config/: app_config.rs  db_conf.rs  mod.rs  redis_conf.rs
common/src/database/: mod.rs
common/src/enums/: gold_change.rs  kline_interval.rs  mod.rs
common/src/error/: mod.rs
common/src/logger/: mod.rs
common/src/middleware/: error_handler.rs  mod.rs
common/src/middleware/sa_token/: auth_checker.rs  mod.rs  sa_router.rs  sa_token_middleware.rs
common/src/models/: coin_thumb.rs  coin_thumb_price.rs  converter.rs  kline.rs  mark_price.rs  mod.rs  order_book_depth.rs  ticker.rs
common/src/models/config_mapping/: base_config.rs  emqx_config.rs  gmail_config.rs  local_upload_config.rs  mod.rs  s3_config.rs  sms_dxb_config.rs
common/src/models/dto/: label.rs  login.rs  mod.rs
common/src/models/req/: app_token.rs  email_req.rs  mod.rs  mqtt_msg.rs  payloads.rs  sms_req.rs
common/src/models/req/spot/: mod.rs  spot_create_trade_req.rs
common/src/models/vo/: file_vo.rs  mod.rs
common/src/mongodb/: client.rs  mod.rs
common/src/mq/: message_queue.rs  mod.rs  subscriber_trait.rs
common/src/pulsar/: client.rs  mod.rs  topics.rs
common/src/redis/: mod.rs  redis_cache.rs  redis_key.rs
common/src/response/: mod.rs
common/src/services/: config_mapping.rs  config_service.rs  emqx_service.rs  mod.rs  wallet_service.rs
common/src/services/email/: gmail.rs  mod.rs
common/src/services/ip_service/: mod.rs  queryer.rs  service.rs
common/src/services/ip_service/queryers/: appworlds.rs  baidu.rs  ip_api.rs  ip_api_2.rs  ip_api_co.rs  ip_api_is.rs  ip_cn.rs  ip_sb.rs  meitu.rs  mir6.rs  mod.rs  pconline.rs  qjqq.rs  realip.rs  vore.rs
common/src/services/sms/: dxb.rs  mod.rs
common/src/services/upload/: local.rs  mod.rs  s3.rs
common/src/utils/: ga_util.rs  generator_id_util.rs  i18n_helper.rs  mod.rs  redis_util.rs  serde_helpers.rs  snowflake.rs  tree_util.rs
config_derive/: Cargo.toml
config_derive/src/: lib.rs
exchange/: Cargo.toml  config.production.toml  config.toml
exchange/src/: main.rs
exchange/src/common/: coin_cache.rs  mark_price_cache.rs  mod.rs  price_cache.rs  ticker_cache.rs
exchange/src/config/: disruptor_config.rs  mod.rs
exchange/src/consumer/: disruptor_consumer.rs  futures_order_consumer.rs  mod.rs  spot_order_consumer.rs  ticker_consumer.rs
input/: Cargo.toml  config.production.toml  config.toml
input/src/: lib.rs  main.rs
input/src/binance/: futures.rs  mod.rs  spot.rs
input/src/bitget/: common.rs  futures.rs  mod.rs  spot.rs
input/src/okx/: futures.rs  mod.rs  spot.rs
job/: Cargo.toml  config.production.toml  config.toml
job/src/: main.rs
manage/: Cargo.toml  config.production.toml  config.toml
manage/src/: main.rs
market/: Cargo.toml  config.production.toml  config.toml
market/src/: main.rs
market/src/consumer/: mod.rs  thumb_price_consumer.rs
market/src/handle/: depth_handle.rs  kline_handle.rs  mod.rs  thumb_handle.rs
orm/: Cargo.toml
orm/src/: lib.rs
orm/src/entities/: mod.rs
orm/src/entities/agent/: app_agent_cash_in_coin.rs  app_agent_cs_link.rs  app_agent_move_log.rs  app_agent_relation.rs  mod.rs
orm/src/entities/cert/: app_cert_request.rs  app_edit_bank_request.rs  mod.rs
orm/src/entities/config/: app_config.rs  app_large_text_config.rs  app_level.rs  app_white_ips.rs  mod.rs
orm/src/entities/contract/: app_seconds_contract.rs  app_seconds_contract_order.rs  mod.rs
orm/src/entities/exchange/: app_exchange_cross_order.rs  app_exchange_futures_coin.rs  app_exchange_futures_funding_rate.rs  app_exchange_futures_index_price.rs  app_exchange_futures_mark_price.rs  app_exchange_match_record.rs  app_exchange_order.rs  app_exchange_spot_coin.rs  mod.rs
orm/src/entities/finance/: app_loan_order.rs  app_mine_order.rs  app_mine_order_income_log.rs  app_mine_project.rs  app_week_loan_order.rs  app_week_loan_setting.rs  mod.rs
orm/src/entities/ieo/: app_ieo.rs  app_ieo_request.rs  mod.rs
orm/src/entities/message/: app_msg_delivery.rs  app_msg_message.rs  mod.rs
orm/src/entities/recharge/: app_recharge_channel.rs  app_recharge_order.rs  mod.rs
orm/src/entities/sms/: app_sms_send_record.rs  mod.rs
orm/src/entities/system/: mod.rs  sys_agent_report.rs  sys_menu.rs  sys_opt_log.rs  sys_role.rs  sys_role_menu.rs  sys_user.rs
orm/src/entities/user/: app_user.rs  app_user_block_chain_wallet.rs  app_user_cash_in_order.rs  app_user_cash_out_address.rs  app_user_cash_out_order.rs  app_user_gold_change.rs  app_user_wallet.rs  app_user_webhook_log.rs  mod.rs
orm/src/migrations/: mod.rs
orm/src/models/: mod.rs
orm/src/repositories/: mod.rs
sql/: PulsarClient使用说明.md  kex.sql  start.sh
