# 工作区配置
[workspace]
resolver = "2"
members = [
    "business",
    "agent",
    "manage",
    "common",
    "exchange",
    "input",
    "market",
    "orm",
    "job",
    "block",
    "block/btc",
    "block/block-common",
]

# 可选成员，单独编译
[workspace.metadata.independent]
members = [
    "block/eth",
    "block/sol",
]

# 工作区依赖版本管理
[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Crypto Exchange Team"]
license = "MIT"

# 工作区依赖
[workspace.dependencies]
# Web框架
actix-web = "4.9"
actix-rt = "2.10"
actix-cors = "0.7"

# 数据库
rbatis = "4.5"
rbdc = "4.5"
rbdc-mysql = "4.5"
rbs = "4.5"

redis = { version = "0.32.0", features = ["tokio-comp", "connection-manager"] }

# 日志和追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
env_logger = "0.11"

# 配置
config = "0.15.11"
dotenv = "0.15"

# 错误处理
anyhow = "1.0"
thiserror = "2.0.12"

# 时间
chrono = { version = "0.4", features = ["serde"] }

# 异步
tokio = { version = "1.25", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 工具
once_cell = "1.20"
uuid = { version = "1.10", features = ["v4", "serde"] }

# 精确数值计算
rust_decimal = { version = "1.35", features = ["serde"] }

# 国际化 (Fluent)
fluent = "0.16"
fluent-bundle = "0.15"
unic-langid = "0.9"

# 内部依赖
common = { path = "./common" }
orm = { path = "./orm" }

sa-token-plugin-actix-web={version = "0.1.11", features = ["redis"]}

# 消息队列
# 消息队列
pulsar = {version = "6.3.1", features = ["tokio-runtime", "serde_json"]}

# OpenSSL (静态链接，用于跨平台编译)
openssl = { version = "0.10", features = ["vendored"] }