[package]
name = "exchange"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# 日志和追踪
tracing.workspace = true
tracing-subscriber.workspace = true
log.workspace = true

# 错误处理
anyhow.workspace = true
thiserror.workspace = true

# 时间
chrono.workspace = true

# 异步
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# 序列化/反序列化
serde.workspace = true
serde_json.workspace = true

# 高性能数据结构
crossbeam = "0.8.4"
dashmap = "5.5.3"
disruptor = "3.4.0"

# 工具
once_cell.workspace = true
uuid.workspace = true

# 精确数值计算
rust_decimal.workspace = true

# 内部依赖
common.workspace = true
orm.workspace = true
pulsar.workspace = true