[package]
name = "input"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# 日志和追踪
tracing.workspace = true
tracing-subscriber.workspace = true
log.workspace = true

# 错误处理
anyhow.workspace = true
thiserror.workspace = true

# 时间
chrono.workspace = true

# 异步
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# HTTP客户端
reqwest = { version = "0.11", features = ["json"] }

# WebSocket客户端
tokio-tungstenite = { version = "0.19", features = ["rustls-tls-webpki-roots"] }

#币安
# binance-sdk = {version =  "33.0.1", features = ["all"] }


# 序列化/反序列化
serde.workspace = true
serde_json.workspace = true

# 工具
once_cell.workspace = true
uuid.workspace = true

# 精确数值计算
rust_decimal.workspace = true

# 内部依赖
common.workspace = true
orm.workspace = true
# pulsar 消息队列
pulsar.workspace = true