[package]
name = "market"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# 日志和追踪
tracing.workspace = true
tracing-subscriber.workspace = true
log.workspace = true

# 错误处理
anyhow.workspace = true
thiserror.workspace = true

# 时间
chrono.workspace = true

# 异步
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# 序列化/反序列化
serde.workspace = true
serde_json.workspace = true

# 数学库
nalgebra = "0.33.2"

# 工具
once_cell.workspace = true
uuid.workspace = true
rayon.workspace = true

# 精确数值计算
rust_decimal.workspace = true

# 内部依赖
common.workspace = true
orm.workspace = true
pulsar.workspace = true

# mongodb
mongodb.workspace = true
bson.workspace = true