[package]
name = "orm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# 数据库ORM
rbatis.workspace = true
rbdc.workspace = true
rbdc-mysql.workspace = true
rbs.workspace = true

# 异步运行时
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# 序列化/反序列化
serde.workspace = true
serde_json.workspace = true

# 日志和追踪
tracing.workspace = true
log.workspace = true

# 错误处理
thiserror.workspace = true
anyhow.workspace = true

# 时间
chrono.workspace = true

# 精确数值计算
rust_decimal.workspace = true

# 公共库
common.workspace = true

#sea-orm = "1.1.19"