[package]
name = "block-sol"
version = "0.1.0"
edition = "2021"

[dependencies]
# 异步运行时
tokio = { version = "1.25", features = ["full"] }
# Solana客户端
solana-client = "1.14"
solana-sdk = "1.14"
# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 日志
log = "0.4"
# 错误处理
thiserror = "1.0"
anyhow = "1.0"
# 内部依赖
common = { path = "../../common" }
orm = { path = "../../orm" }
block-common = { path = "../block-common" }